--- a/viz/index.html
+++ b/viz/index.html
@@ -3,76 +3,73 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>CEM — Coil Ring UI (tek dosya)</title>
+<title>CEM — Coil Ring UI (tek dosya, düzgün hizalı)</title>
 <style>
   :root{
-    --ring: 520px;          /* dış halka çapı */
-    --coil-w: 56px;         /* bobin genişliği */
-    --coil-h: 28px;         /* bobin yüksekliği */
-    --trackInset: 60px;
-    --radius: calc(var(--ring)/2 - var(--trackInset));
-    --disc: 280px;          /* rotor diski çapı */
-    --bg: #0a0b0f;
-    --line: #19202a;
+    /* Boyutlar */
+    --ring: 560px;            /* dış halka çapı */
+    --trackInset: 72px;       /* bobin yolunun dış kenardan içe uzaklığı  */
+    --radius: calc(var(--ring)/2 - var(--trackInset)); /* bobinlerin gerçek yarıçapı */
+    --coil-w: 56px;
+    --coil-h: 28px;
+    --disc: 310px;            /* orta disk çapı */
+
+    /* Renkler */
+    --bg: #0a0b10;
+    --panel: #0e1219;
+    --border: #1a2130;
+    --text: #e9eef6;
+    --muted:#9aa6b2;
     --glow: #57ff9a;
   }
   *{box-sizing:border-box}
   html,body{height:100%}
   body{
     margin:0;
-    background: radial-gradient(1000px 700px at 20% -10%, #0f121a, var(--bg) 60%);
-    color:#e9eef6; font:14px/1.5 Inter, system-ui, -apple-system, Segoe UI, Arial;
+    background: radial-gradient(1100px 800px at 20% -10%, #111420, var(--bg) 60%);
+    color:var(--text);
+    font:14px/1.5 Inter,system-ui,-apple-system,Segoe UI,Arial;
     display:grid; place-items:center; padding:20px;
   }
   .stage{
-    width:min(1100px, 96vw);
-    display:grid; grid-template-columns: 1fr 320px; gap:28px; align-items:center;
+    width:min(1140px,96vw);
+    display:grid; grid-template-columns: 1fr 340px; gap:28px; align-items:center;
   }
-  @media (max-width:1000px){ .stage{grid-template-columns: 1fr} }
+  @media (max-width:1020px){ .stage{grid-template-columns:1fr} }
 
-  /* --- RING AREA --- */
+  /* ——— GÖRSEL ALAN ——— */
   .arena{
     position:relative;
     width:var(--ring); height:var(--ring);
     margin:auto; border-radius:50%;
-    /* beyaz-gri halka görünümü */
     background:
-      radial-gradient(circle at 50% 50%, #10141c 40%, #0c1119 41%),
-      conic-gradient(#111722, #101723 40%, #0f1521);
-    box-shadow: inset 0 0 40px #000;
+      radial-gradient(circle at 50% 50%, #0e1219 40%, #0c1119 41%),
+      conic-gradient(#0f1521, #0f1724 40%, #101826);
+    box-shadow: inset 0 0 60px #000a;
   }
-  /* dış çemberler */
-  .ring-outline, .ring-outline2{
+  .ring-outer{
     position:absolute; inset:10px; border-radius:50%;
-    border: 10px solid #e9eef61c;
-    box-shadow: 0 0 0 1px #ffffff08 inset;
+    border:10px solid #ffffff14; box-shadow:0 0 0 1px #fff1 inset;
+    opacity:.35;
   }
-  .ring-outline2{ 
-     inset: var(--trackInset);
-  border: 10px solid #9ad7ff22;
-  border-radius:50%;
-  box-shadow: 0 0 0 1px #ffffff08 inset;
-}
-  /* ince kılavuz çizgi */
-  .guide{ position:absolute; inset:0; border-radius:50%; border:1px dashed #293142; }
+  .ring-track{
+    position:absolute; inset:var(--trackInset); border-radius:50%;
+    border:10px solid #8bd0ff26; box-shadow:0 0 0 1px #ffffff10 inset;
+  }
+  .ring-dash{ position:absolute; inset:0; border-radius:50%; border:1px dashed #233042; opacity:.4 }
 
-  /* rotor diski */
+  /* Merkez disk */
   .disc{
     position:absolute; left:50%; top:50%; transform:translate(-50%,-50%);
     width:var(--disc); height:var(--disc); border-radius:50%;
-    background:
-      radial-gradient(circle at 35% 30%, #e9eef6 0%, #d5dce6 35%, #c1c9d4 60%, #a6b0bd 100%);
-    box-shadow:
-      inset 6px -8px 14px #9aa3b1aa,
-      inset -10px 12px 24px #ffffff99,
-      0 12px 40px #0008;
-    filter:saturate(.9) contrast(1.05);
+    background: radial-gradient(circle at 35% 30%, #eef3fa 0%, #dde3ee 35%, #c6cfdb 65%, #b0bac8 100%);
+    box-shadow: inset 8px -10px 18px #9aa3b1b0, inset -10px 12px 24px #ffffffaa, 0 16px 46px #0009;
   }
   .hub{
     position:absolute; left:50%; top:50%; transform:translate(-50%,-50%);
-    width:68px; height:68px; border-radius:50%;
-    background: radial-gradient(circle at 35% 35%, #7b8591, #505a67 60%, #3e4652);
-    box-shadow: inset 0 0 0 6px #cdd3dc55, 0 6px 14px #0009;
+    width:74px; height:74px; border-radius:50%;
+    background: radial-gradient(circle at 35% 35%, #808a98, #566171 60%, #465160);
+    box-shadow: inset 0 0 0 6px #cdd3dc55, 0 8px 16px #0009;
   }
   .axle{
     position:absolute; left:50%; top:50%; transform:translate(-50%,-50%);
@@ -80,7 +77,7 @@
     box-shadow: inset 0 0 0 3px #111820;
   }
 
-  /* rotor iğnesi (açı göstergesi) */
+  /* Rotor iğnesi */
   .needle{
     position:absolute; left:50%; top:50%; transform:translate(-50%,-100%) rotate(0deg);
     width:4px; height:calc(var(--radius) + 28px);
@@ -89,51 +86,46 @@
     border-radius:2px; box-shadow:0 0 14px #ffb30080;
   }
 
-  /* --- COILS --- */
+  /* ——— BOBİNLER ———
+     Artık trig ile (x,y) yerleştiriyoruz; transform sadece rotasyon için. */
   .coil{
-    position:absolute; left:50%; top:50%;
+    position:absolute; left:0; top:0;
     width:var(--coil-w); height:var(--coil-h);
-    transform-origin:50% calc(var(--radius) + var(--coil-h)/2);
-    transform: translate(-50%,-50%) rotate(var(--rot)) translateY(calc(-1 * var(--radius)));
     border-radius:8px; overflow:hidden;
-    box-shadow: 0 2px 10px #0008, 0 6px 22px #0005;
+    transform: translate(-50%,-50%) rotate(var(--rot));
+    filter:brightness(.85) saturate(.9);
+    box-shadow: 0 3px 12px #0008, 0 8px 24px #0005;
   }
-  .coil .body{
-    position:absolute; inset:0;
-    background:
-      linear-gradient(180deg, #bd7b2a 0%, #a9621f 50%, #bd7b2a 100%); /* bakır */
-  }
+  .coil .body{ position:absolute; inset:0; background:linear-gradient(180deg,#bd7b2a 0%, #a45d1b 50%, #bd7b2a 100%); }
   .coil .capL, .coil .capR{
-    position:absolute; top:0; width:10px; height:100%;
-    background:#5f6b77; filter:brightness(1.15);
+    position:absolute; top:0; width:10px; height:100%; background:#5f6b77; filter:brightness(1.1);
   }
-  .coil .capL{ left:0; box-shadow: inset -2px 0 3px #0005 }
-  .coil .capR{ right:0; box-shadow: inset 2px 0 3px #0005 }
-  .coil.active{ box-shadow: 0 2px 10px #0008, 0 0 30px var(--glow); }
-  .coil.active .body{ filter:brightness(1.1) }
+  .coil .capL{ left:0;  box-shadow: inset -2px 0 3px #0005 }
+  .coil .capR{ right:0; box-shadow: inset  2px 0 3px #0005 }
+  .coil.active{ box-shadow: 0 3px 12px #0008, 0 0 32px var(--glow); filter:brightness(1) }
   .coil.active::after{
-    content:""; position:absolute; right:-12px; top:50%; width:12px; height:12px;
-    margin-top:-6px; border-radius:50%; background:var(--glow); box-shadow:0 0 16px var(--glow);
+    content:""; position:absolute; right:-12px; top:50%; width:12px; height:12px; margin-top:-6px;
+    border-radius:50%; background:var(--glow); box-shadow:0 0 16px var(--glow);
   }
 
-  /* PANEL */
+  /* ——— PANEL ——— */
   .panel{
-    background:#0e1219; border:1px solid #1a2130; border-radius:14px; padding:14px;
+    background:var(--panel); border:1px solid var(--border); border-radius:14px; padding:14px;
     box-shadow:0 12px 36px #0007; backdrop-filter: blur(2px);
   }
   .panel h3{margin:4px 0 8px; font-size:15px; opacity:.95}
   .row{display:flex; gap:8px; flex-wrap:wrap; align-items:center; margin:8px 0}
   button,select,input{
-    background:#0c1119; color:#e9eef6; border:1px solid #1a2230;
-    border-radius:10px; padding:8px 12px; font:600 13px/1 Inter, system-ui, Arial;
+    background:#0c1119; color:var(--text); border:1px solid var(--border);
+    border-radius:10px; padding:8px 12px; font:600 13px/1 Inter,system-ui,Arial;
   }
   button{background:linear-gradient(180deg,#2b72ff,#1f59d1); border-color:#2a65e0; cursor:pointer}
   button.secondary{background:#121722}
   button:disabled{opacity:.6; cursor:not-allowed}
-  input[type="number"]{width:90px}
+  input[type="number"]{width:92px}
   input[type="text"]{width:100%}
-  .stats{font:12px/1.6 ui-monospace, SFMono-Regular, Menlo, Consolas; color:#bcd; background:#090d13; border:1px solid #162033; border-radius:8px; padding:8px; margin-top:8px}
-  .hint{font-size:12px;color:#9aa6b2;margin-top:6px}
+  .stats{font:12px/1.6 ui-monospace,Menlo,Consolas; color:#cfe2ff; background:#09101a; border:1px solid #162033; border-radius:8px; padding:8px; margin-top:8px}
+  .hint{font-size:12px;color:var(--muted);margin-top:6px}
 </style>
 </head>
 <body>
@@ -141,9 +133,9 @@
 <div class="stage">
   <!-- Görsel alan -->
   <div class="arena" id="arena">
-    <div class="ring-outline"></div>
-    <div class="ring-outline2"></div>
-    <div class="guide"></div>
+    <div class="ring-outer"></div>
+    <div class="ring-track"></div>
+    <div class="ring-dash"></div>
 
     <div class="disc" id="disc"></div>
     <div class="hub"></div>
@@ -198,58 +190,75 @@
       <button class="secondary" id="btn4x90">4×90°</button>
       <button class="secondary" id="btn6x60">6×60°</button>
       <button class="secondary" id="btn8x45">8×45°</button>
+      <button class="secondary" id="btn12x30">12×30°</button>
     </div>
 
     <div class="stats" id="stats">t=0.000s • açı=0.0° • rpm=300 • aktif=[]</div>
-    <div class="hint">İpucu: Parametreleri değiştir → <b>Başlat</b>. Yeşil parlak bobin(ler) aktif; sarı iğne rotor açısıdır.</div>
+    <div class="hint">İpucu: Parametreleri değiştir → <b>Başlat</b>. Yeşil parlayan bobin(ler) aktiftir; sarı iğne rotor açısıdır.</div>
   </div>
 </div>
 
 <script>
-/* ===== Utilities ===== */
+/* ===== Yardımcılar ===== */
 const $ = id => document.getElementById(id);
 const wrap360 = a => (a%360 + 360) % 360;
 const clamp = (x,a,b)=> Math.max(a, Math.min(b, x));
 const angDistCCW = (from,to)=> { let d = wrap360(to-from); if(d<0) d+=360; return d; };
 
 /* ===== DOM ===== */
-const arena = $("arena");
-const needle = $("needle");
-const disc = $("disc");
-const stats = $("stats");
-
+const arena = $("arena"), needle = $("needle"), disc = $("disc"), stats = $("stats");
 const inpN=$("inpN"), inpMode=$("inpMode"), inpDir=$("inpDir"),
       inpRPM=$("inpRPM"), inpStep=$("inpStep"), inpDwell=$("inpDwell"),
       inpAngles=$("inpAngles");
 const btnStart=$("btnStart"), btnStop=$("btnStop"), btnReset=$("btnReset");
-const btn4x90=$("btn4x90"), btn6x60=$("btn6x60"), btn8x45=$("btn8x45");
+const btn4x90=$("btn4x90"), btn6x60=$("btn6x60"), btn8x45=$("btn8x45"), btn12x30=$("btn12x30");
 
-/* ===== State ===== */
+/* ===== Durum ===== */
 let N=4, mode=2, dir=1, rpm=300, stepMs=40, dwell=60;
 let angles=[0,90,180,270];
 let t=0, ang=0, raf=null, last=0;
 let coils=[];
 
-/* ===== Build coils on circumference ===== */
-function buildCoils(){
-  coils.forEach(c=>c.el.remove());
-  coils=[];
-  for(let i=0;i<N;i++){
-    const el = document.createElement('div');
-    el.className = 'coil';
-    el.style.setProperty('--rot', (360/N)*i + 'deg');
+/* ===== CSS değişkenlerini oku ===== */
+function cssNum(sel, name){
+  const cs = getComputedStyle(sel);
+  return parseFloat(cs.getPropertyValue(name));
+}
+function trackRadius(){
+  const ring = cssNum(document.documentElement, '--ring');
+  const inset = cssNum(document.documentElement, '--trackInset');
+  return ring/2 - inset;
+}
+function ringCenter(){
+  return { cx: arena.clientWidth/2, cy: arena.clientHeight/2 };
+}
 
+/* ===== Bobinleri kur ve yerleştir (trig ile tam yol üstüne) ===== */
+function buildCoils(){
+  coils.forEach(c=>c.el.remove()); coils=[];
+  for(let i=0;i<N;i++){
+    const el = document.createElement('div'); el.className='coil';
     const body = document.createElement('div'); body.className='body';
     const capL = document.createElement('div'); capL.className='capL';
     const capR = document.createElement('div'); capR.className='capR';
-    el.append(body,capL,capR);
-    arena.appendChild(el);
+    el.append(body,capL,capR); arena.appendChild(el);
     coils.push({el});
   }
+  placeCoils();
 }
-buildCoils();
+function placeCoils(){
+  const r = trackRadius();
+  const {cx, cy} = ringCenter();
+  coils.forEach((c, i) => {
+    const deg = (360/N) * i;           // çevresel konum
+    const rad = (deg - 90) * Math.PI/180; // 0° = tepe
+    c.el.style.left = (cx + r*Math.cos(rad)) + "px";
+    c.el.style.top  = (cy + r*Math.sin(rad)) + "px";
+    c.el.style.setProperty('--rot', deg + 'deg'); // yola teğet yönelim
+  });
+}
 
-/* ===== Read UI ===== */
+/* ===== UI oku ===== */
 function readUI(){
   N = clamp(parseInt(inpN.value||"4"),1,64);
   mode = parseInt(inpMode.value||"2");
@@ -258,16 +267,15 @@ function readUI(){
   stepMs = parseFloat(inpStep.value||"40");
   dwell  = parseFloat(inpDwell.value||"60");
 
-  const arr = (inpAngles.value||"")
-    .split(",").map(s=>parseFloat(s.trim()))
-    .filter(v=>!Number.isNaN(v)).map(wrap360);
+  const arr = (inpAngles.value||"").split(",").map(s=>parseFloat(s.trim())).filter(v=>!Number.isNaN(v)).map(wrap360);
   if(arr.length===N){ angles = arr; }
-  else { angles = [...Array(N)].map((_,i)=> i*(360/N)); inpAngles.value = angles.join(","); }
+  else{ angles = [...Array(N)].map((_,i)=> i*(360/N)); inpAngles.value = angles.join(","); }
 
   if(coils.length!==N) buildCoils();
+  placeCoils();
 }
 
-/* ===== Active EMs ===== */
+/* ===== Aktif EM'ler ===== */
 function activeForAngle(a){
   const on = new Set();
   for(let i=0;i<N;i++){
@@ -283,43 +291,46 @@ function activeForAngle(a){
   return [...on].sort((x,y)=>x-y);
 }
 
-/* ===== Render ===== */
+/* ===== Çizim ===== */
 function render(){
   const act = activeForAngle(ang);
   coils.forEach((c,i)=> c.el.classList.toggle('active', act.includes(i)));
   needle.style.transform = `translate(-50%,-100%) rotate(${ang}deg)`;
-  // diski hafif ters yönde döndürüp hacim hissi
-  disc.style.transform = `translate(-50%,-50%) rotate(${-(ang*0.4)}deg)`;
+  disc.style.transform = `translate(-50%,-50%) rotate(${-(ang*0.4)}deg)`; // hafif parallax
   stats.textContent = `t=${t.toFixed(3)}s • açı=${wrap360(ang).toFixed(1)}° • rpm=${rpm.toFixed(1)} • aktif=[${act.join(",")}]`;
 }
 
-/* ===== Loop ===== */
+/* ===== Döngü ===== */
 function loop(now){
   if(!last) last = now;
-  const dt = (now - last)/1000;
-  const simStep = stepMs/1000;
+  const dt = (now - last)/1000, step = stepMs/1000;
   let acc = dt;
-  while(acc >= simStep){
-    t += simStep;
-    ang = wrap360(ang + 360*(rpm/60)*simStep*dir);
-    acc -= simStep;
+  while(acc >= step){
+    t += step;
+    ang = wrap360(ang + 360*(rpm/60)*step*dir);
+    acc -= step;
   }
   last = now - acc*1000;
   render();
   raf = requestAnimationFrame(loop);
 }
 
-/* ===== Buttons ===== */
-btnStart.onclick=()=>{ readUI(); if(raf) return; last=0; raf=requestAnimationFrame(loop); };
-btnStop.onclick =()=>{ if(raf){ cancelAnimationFrame(raf); raf=null; } };
-btnReset.onclick=()=>{ if(raf){ cancelAnimationFrame(raf); raf=null; } t=0; ang=0; render(); };
+/* ===== Butonlar ===== */
+btnStart.onclick = ()=>{ readUI(); if(!raf){ last=0; raf=requestAnimationFrame(loop); } };
+btnStop.onclick  = ()=>{ if(raf){ cancelAnimationFrame(raf); raf=null; } };
+btnReset.onclick = ()=>{ if(raf){ cancelAnimationFrame(raf); raf=null; } t=0; ang=0; render(); };
 
-btn4x90.onclick = ()=>{ inpN.value=4; inpAngles.value="0,90,180,270"; readUI(); render(); };
-btn6x60.onclick = ()=>{ inpN.value=6; inpAngles.value="0,60,120,180,240,300"; readUI(); render(); };
-btn8x45.onclick = ()=>{ inpN.value=8; inpAngles.value="0,45,90,135,180,225,270,315"; readUI(); render(); };
+/* Presetler */
+btn4x90.onclick = ()=>{ inpN.value=4;  inpAngles.value="0,90,180,270"; readUI(); render(); };
+btn6x60.onclick = ()=>{ inpN.value=6;  inpAngles.value="0,60,120,180,240,300"; readUI(); render(); };
+btn8x45.onclick = ()=>{ inpN.value=8;  inpAngles.value="0,45,90,135,180,225,270,315"; readUI(); render(); };
+btn12x30.onclick= ()=>{ inpN.value=12; inpAngles.value=Array.from({length:12},(_,i)=>i*30).join(","); readUI(); render(); };
 
-/* init */
-readUI(); render();
+/* Resize'da hizayı koru */
+window.addEventListener('resize', placeCoils);
+
+/* Init */
+buildCoils(); readUI(); render();
 </script>
 </body>
 </html>
